# stellar-bootcamp

./: .gitignore  README.md
aula02/: README.md
aula02/sdk/: main.py  pyproject.toml  transfer.py  utils.py  wallet.py
aula02/sdk/payment/: main.py  transfer.py  utils.py  wallet.py
aula02/sdk/token/: main.py  tokens.py  utils.py  wallet.py
aula02/setup-node/: docker-compose.yaml  prometheus.yml  stellar_dashboard.json
aula03/: README.md
aula03/learn/: Cargo.toml
aula03/learn/src/: main.rs
aula03/memory_manager/: Cargo.toml
aula03/memory_manager/src/: main.rs
aula03/rustc/: main
aula03/soroban-smartcontracts/contracts/hello_world/: Cargo.toml
aula03/soroban-smartcontracts/contracts/hello_world/src/: lib.rs
aula04/: README.md
aula04/soroban-smartcontracts/: README.md
aula04/soroban-smartcontracts/contracts/flipper/: Cargo.toml
aula04/soroban-smartcontracts/contracts/flipper/src/: lib.rs  test.rs
aula04/soroban-smartcontracts/contracts/flipper/test_snapshots/test/: multiple_flips_test.1.json  test.1.json
aula04/soroban-smartcontracts/contracts/increment/: Cargo.toml
aula04/soroban-smartcontracts/contracts/increment/src/: lib.rs  test.rs
aula04/soroban-smartcontracts/contracts/increment/test_snapshots/test/: multiple_increments_test.1.json  simple_test.1.json  (+1 more)
aula04/soroban-smartcontracts/contracts/task_manager/: Cargo.toml
aula04/soroban-smartcontracts/contracts/task_manager/src/: lib.rs  test.rs
aula05/: .gitignore  README.md
aula05/contracts/token/: Cargo.toml
aula05/contracts/token/src/: admin.rs  contract.rs  test.rs
