dev_dependencies = { soroban-sdk = { workspace = true } }
[package]
name = "soroban-token-contract"
description = "Soroban standard token contract"
version = "0.0.6"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
soroban-token-sdk = { version = "20.3.1" }

[dev-dependencies]
soroban-sdk = { version = "20.3.1", features = ["testutils"] }
