[package]
name = "token"
description = "Soroban standard token contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
soroban-token-sdk = { version = "20.3.1" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
